# selfattention_audio

./: .flake8  .pre-commit-config.yaml  README.md  codecov.yml  example_analysis.ipynb  fit_model_example.py  pyproject.toml
.github/workflows/: main.yaml
selfattention_audio/: dataset_helpers.py  extract_features_helper.py  lightning_modules.py  nn_helpers.py
tests/: conftest.py  test_dataset_helpers.py  test_extract_features_helper.py  test_lightning_modules.py  test_nn_helpers.py  test_selfattention_audio.py
