[tool.poetry]
name = "selfattention_audio"
version = "0.1.0"
description = ""
authors = ["Moritz Boos <m.boos@eyeo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "0.23.1"
torch = "1.3.1"
poethepoet = "*"
scikit-image = "0.16.1"
librosa = "0.7.2"
numba = "0.48"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install-ltt = "python3 -m pip install light-the-torch"
run-ltt = "python3 -m light_the_torch install --upgrade torch==1.3.1"
install-lightning = "python3 -m pip install pytorch-lightning==0.6.0"
autoinstall-torch-cuda = ["install-ltt", "run-ltt", "install-lightning"]